--- a/src/main/resources/templates/boardmodify.html
+++ b/src/main/resources/templates/boardmodify.html
@@ -13,6 +13,7 @@
       <span class="additional-text">음란물, 차별, 비하, 혐오 및 초상권, 저작권 침해 게시물은 민, 형사상의 책임을 질 수 있습니다.</span>
     </div>
     <textarea name="content" th:text="${board.getContent()}" placeholder="내용을 입력하세요"></textarea>
+    <input type="file" name="file">
     <button type="submit">수정</button>
   </form>
 </div>
